--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,24 @@
 # Starter pipeline
+- task: Kubernetes@1
+  inputs:
+    connectionType: 'Kubernetes Service Connection'
+    kubernetesServiceEndpoint: 'testUSgov'
+    command: 'create'
+    useConfigurationFile: true
+    configurationType: 'inline'
+    inline: |
+      apiVersion: v1
+      kind: Pod
+      metadata:
+        name: private-regtest
+      spec:
+        containers:
+        - name: private-reg-container
+          image: test_image
+        imagePullSecrets:
+        - name: mysecret2
+    secretType: 'dockerRegistry'
+    containerRegistryType: 'Azure Container Registry'
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
@@ -7,7 +27,7 @@ trigger:
 - master
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'default'
 
 steps:
 - script: echo Hello, world!
